# Orbirus

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  desktop.rs  fence.rs  icons.rs  launch.rs  main.rs  render.rs  rules.rs  rules_ui.rs  settings_ui.rs  shellmenu.rs
