[package]
name = "orbirus"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
opt-level = 3
